--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="./static/favicon.ico" rel="shortcut icon">
-    <title>舜新建材库存管理系统</title>
+    <title>库存管理系统</title>
 </head>
 
 <body>
